--- a/index.css
+++ b/index.css
@@ -1,10 +1,6 @@
-/* 기본 세팅 */
-* {
-  box-sizing: border-box;
-}
 body {
   margin: 0 auto;
-  width: 50%;
+  width: 40%;
   font-family: sans-serif;
   line-height: 1.6;
   padding: 2rem 0;
@@ -16,7 +12,6 @@ h1#title {
   font-size: 1.5rem;
 }
 
-/* 섹션 공통 스타일 */
 section {
   margin-bottom: 3rem;
 }
@@ -27,24 +22,69 @@ section h2 {
   padding-bottom: 0.5rem;
 }
 
-/* 그래프 */
-.bar-chart {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-evenly;
-  border: 1px solid #aaa;
+.chart-container {
+  position: relative;
   background-color: #f9f9f9;
-  padding: 1rem;
-}
-.bar-chart .bar {
-  width: 2rem;
-  background-color: steelblue;
-  transition: height 0.3s ease;
+  width: 100%;
+  height: 400px;
 }
 
-/* 테이블 */
+.graph-box {
+  position: relative;
+  height: 90%;
+  margin-left: 50px;
+  margin-bottom: 20px;
+  border-left: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.bars {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.bar {
+  position: absolute;
+  bottom: 0;
+  width: 2rem;
+  background-color: steelblue;
+  text-align: center;
+  transform: translateX(-50%);
+}
+
+.bar-value {
+  position: absolute;
+  top: -1.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 14px;
+  font-weight: bold;
+  color: black;
+  white-space: nowrap;
+}
+.bar-label {
+  position: absolute;
+  top: 100%;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 4px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.y-tick {
+  position: absolute;
+  left: -10px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: right;
+  transform: translateX(-100%);
+}
+
+.y-tick:first-child {
+  transform: translateX(-100%) translateY(100%);
+}
 table {
   width: 100%;
   border-collapse: collapse;
@@ -60,7 +100,6 @@ th {
   background-color: #f0f0f0;
 }
 
-/* 폼 (값 추가 / JSON 편집) */
 form {
   display: flex;
   flex-wrap: wrap;
