--- a/index.css
+++ b/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0 auto;
   width: 40%;
-  font-family: sans-serif;
   line-height: 1.6;
   padding: 2rem 0;
 }
@@ -15,18 +14,13 @@ h1#title {
 section {
   margin-bottom: 3rem;
 }
-section h2 {
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 0.5rem;
-}
 
 .chart-container {
   position: relative;
   background-color: #f9f9f9;
   width: 100%;
   height: 400px;
+  user-select: none;
 }
 
 .graph-box {
